--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
             "styles": [
               "src/styles.sass"
             ],
-            "scripts": []
+            "scripts": ["node_modules/@antv/f2/dist/f2-all.min.js"]
           },
           "configurations": {
             "production": {
